Added all needed fields to the index.html file for the mortgage calculator

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,13 @@
     </nav>
     <h1>Mortgage Calculator</h1>
 
+    <p>Principal: <input type="number" id="principalField"/></p>
+    <p>Interest Rate: <input type="number" id="interestField"/></p>
+    <p>Loan Length: <input type="number" id="loanLengthField"/></p>
+
+    <p>Monthly Payment: <input type="number" id="monthlyPaymentField" readonly/></p>
+    <p>Total Interest: <input type="number" id="totalInterestField" readonly/></p>
+
     <script src="scripts/mortgageCalculator.js"></script>
 </body>
 </html>
