--- a/html/index.html
+++ b/html/index.html
@@ -14,13 +14,16 @@
     </nav>
     <h1>Mortgage Calculator</h1>
 
-    <p>Principal: <input type="number" id="principalField"/></p>
-    <p>Interest Rate: <input type="number" id="interestField"/></p>
-    <p>Loan Length: <input type="number" id="loanLengthField"/></p>
+    <p>Principal: <input type="number" id="principalField" /></p>
+    <p>Interest Rate: <input type="number" id="interestRateField" /></p>
+    <p>Loan Length: <input type="number" id="loanLengthField" /></p>
 
-    <p>Monthly Payment: <input type="number" id="monthlyPaymentField" readonly/></p>
-    <p>Total Interest: <input type="number" id="totalInterestField" readonly/></p>
+    <input type="button" value="Calculate" id="calculateButton" />
 
-    <script src="scripts/mortgageCalculator.js"></script>
+    <p>Monthly Payment: <input type="number" id="monthlyPaymentField" readonly /></p>
+    <p>Total Interest: <input type="number" id="totalInterestField" readonly /></p>
+
+    <script src="/scripts/mortgageCalculator.js"></script>
 </body>
 </html>
+
