--- a/html/presentValueAnnuityCalculator.html
+++ b/html/presentValueAnnuityCalculator.html
@@ -33,7 +33,9 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/scripts/futureValueDeposit.js"></script>
+    <script src="/scripts/presentValueAnnuityCalculator.js"></script>
+
 </body>
 </html>
