Updated file location

--- a/futureValueCalculator.html
+++ b/futureValueCalculator.html
@@ -10,9 +10,9 @@
     />
 </head>
 <nav class="text-center">
-    <a href="/html/index.html">Mortgage Calculator</a>
-    <a href="/html/futureValueCalculator.html">Future Value Calculator</a>
-    <a href="/html/presentValueAnnuityCalculator.html"
+    <a href="/index.html">Mortgage Calculator</a>
+    <a href="/futureValueCalculator.html">Future Value Calculator</a>
+    <a href="/presentValueAnnuityCalculator.html"
         >Present Value Annuity Calculator</a
     >
 </nav>
